Got rid of the second body tag, fixed a whitespace under userlist

--- a/bigbluebutton-html5/app/client/stylesheets/users.less
+++ b/bigbluebutton-html5/app/client/stylesheets/users.less
@@ -59,7 +59,7 @@
     -moz-flex: 1 1 20%;
     -ms-flex: 1 1 20%;
     flex: 1 1 20%;
-    height: 100%;
+    height: 99%;
   }
   @media @mobile-portrait-with-keyboard, @desktop-portrait, @mobile-portrait {
     display: none !important;
